feat: added caching and etag support
